--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "@rubriclab/memory",
 	"module": "index.ts",
 	"version": "0.0.0",
+	"private": false,
 	"type": "module",
 	"devDependencies": {
 		"@types/bun": "latest"
