--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"private": false,
 	"type": "module",
 	"devDependencies": {
-		"@types/bun": "latest"
+		"@types/bun": "^1.1.10"
 	},
 	"peerDependencies": {
 		"typescript": "^5.0.0"
