mod lint script

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rubriclab/memory",
   "module": "index.ts",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": false,
   "type": "module",
   "devDependencies": {
@@ -25,7 +25,7 @@
     "bleed": "bun x npm-check-updates -u && bun i",
     "clean": "rm -rf .next && rm -rf node_modules",
     "format": "bun x biome format --write .",
-    "lint": "bun x biome check .",
-    "lint:fix": "bun x biome lint . --write --unsafe"
+    "lint": "bun x biome check . && bun x biome lint .",
+    "lint:fix": "bun x biome check --fix --unsafe . && bun x biome lint --write --unsafe ."
   }
 }
