--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "@rubriclab/memory",
   "module": "src/index.ts",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "private": false,
   "type": "module",
   "devDependencies": {
-    "@types/bun": "^1.1.10"
+    "@types/bun": "^1.1.10",
+    "drizzle-kit": "^0.25.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.66",
+    "@neondatabase/serverless": "^0.10.1",
     "@rubriclab/config": "*",
     "@rubriclab/package": "*",
     "@t3-oss/env-nextjs": "^0.11.1",
     "ai": "^3.4.9",
     "chalk": "^5.3.0",
+    "drizzle-orm": "^0.34.1",
     "zod": "^3.23.8"
   },
   "simple-git-hooks": {
