--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@rubriclab/memory",
   "module": "src/index.ts",
-  "version": "0.0.13",
+  "main": "src/index.ts",
+  "version": "0.0.14",
   "private": false,
   "type": "module",
   "devDependencies": {
