--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@rubriclab/memory",
   "module": "src/index.ts",
   "main": "src/index.ts",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "private": false,
   "type": "module",
   "devDependencies": {
@@ -13,11 +13,14 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.66",
+    "@prisma/client": "^5.20.0",
     "@rubriclab/config": "*",
     "@rubriclab/package": "*",
     "@t3-oss/env-nextjs": "^0.11.1",
     "ai": "^3.4.9",
     "chalk": "^5.3.0",
+    "nanoid": "^5.0.7",
+    "prisma": "^5.20.0",
     "zod": "^3.23.8"
   },
   "simple-git-hooks": {
@@ -26,9 +29,13 @@
   "publishConfig": {
     "access": "public"
   },
+  "prisma": {
+    "schema": "./prisma/schema"
+  },
   "scripts": {
     "prepare": "bun x simple-git-hooks",
     "bleed": "bun x npm-check-updates -u",
+    "db:push": "prisma db push && prisma generate --sql",
     "clean": "rm -rf .next && rm -rf node_modules",
     "format": "bun x biome format --write .",
     "eval": "bun src/evals/index.ts",
