--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "@rubriclab/memory",
   "module": "src/index.ts",
   "main": "src/index.ts",
-  "version": "0.0.30",
+  "version": "0.0.31",
   "private": false,
   "type": "module",
   "devDependencies": {
-    "@types/bun": "^1.1.10"
+    "@types/bun": "^1.1.10",
+    "kysely-codegen": "^0.16.8",
+    "pg": "^8.13.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.66",
-    "@prisma/client": "^5.20.0",
     "@rubriclab/config": "*",
     "@rubriclab/package": "*",
     "@t3-oss/env-nextjs": "^0.11.1",
     "ai": "^3.4.9",
     "chalk": "^5.3.0",
     "nanoid": "^5.0.7",
-    "prisma": "^5.20.0",
     "zod": "^3.23.8"
   },
   "simple-git-hooks": {
@@ -34,8 +34,8 @@
   },
   "scripts": {
     "prepare": "bun x simple-git-hooks",
+    "db:generate": "kysely-codegen --include-pattern='public.*'",
     "bleed": "bun x npm-check-updates -u",
-    "db:push": "prisma db push && prisma generate --sql",
     "clean": "rm -rf .next && rm -rf node_modules",
     "format": "bun x biome format --write .",
     "eval": "bun src/evals/index.ts",
