--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@rubriclab/memory",
   "module": "src/index.ts",
   "main": "src/index.ts",
-  "version": "0.0.32",
+  "version": "0.0.33",
   "private": false,
   "type": "module",
   "devDependencies": {
@@ -20,6 +20,7 @@
     "@t3-oss/env-nextjs": "^0.11.1",
     "ai": "^3.4.9",
     "chalk": "^5.3.0",
+    "kysely": "^0.27.4",
     "nanoid": "^5.0.7",
     "zod": "^3.23.8"
   },
