--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@rubriclab/memory",
   "module": "src/index.ts",
   "main": "src/index.ts",
-  "version": "0.0.35",
+  "version": "0.0.36",
   "private": false,
   "type": "module",
   "devDependencies": {
@@ -18,11 +18,12 @@
     "@rubriclab/config": "*",
     "@rubriclab/package": "*",
     "@t3-oss/env-nextjs": "^0.11.1",
-    "pg": "^8.13.0",
     "ai": "^3.4.9",
     "chalk": "^5.3.0",
     "kysely": "^0.27.4",
     "nanoid": "^5.0.7",
+    "openai": "^4.68.1",
+    "pg": "^8.13.0",
     "zod": "^3.23.8"
   },
   "simple-git-hooks": {
