--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "@rubriclab/memory",
   "module": "src/index.ts",
   "main": "src/index.ts",
-  "version": "0.0.48",
+  "version": "0.0.49",
   "private": false,
   "type": "module",
-  "devDependencies": {
-    "@types/bun": "^1.2.15",
-    "kysely-codegen": "^0.16.8"
-  },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.2.15"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
@@ -36,7 +35,6 @@
     "schema": "./prisma/schema"
   },
   "scripts": {
-    "postinstall": "bun db:generate",
     "prepare": "bun x simple-git-hooks",
     "db:generate": "bun x kysely-codegen --include-pattern='public.*'",
     "bleed": "bun x npm-check-updates -u",
