--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@rubriclab/memory",
 	"module": "src/index.ts",
 	"main": "src/index.ts",
-	"version": "0.0.50",
+	"version": "0.0.51",
 	"private": false,
 	"type": "module",
 	"peerDependencies": {
@@ -39,9 +39,7 @@
 		"db:generate": "bun x kysely-codegen --include-pattern='public.*'",
 		"bleed": "bun x npm-check-updates -u",
 		"clean": "rm -rf .next && rm -rf node_modules",
-		"format": "bun x biome format --write .",
 		"eval": "bun src/evals/index.ts",
-		"lint": "bun x biome check . && bun x biome lint .",
-		"lint:fix": "bun x biome check --fix --unsafe . && bun x biome lint --write --unsafe ."
+		"format": "bun x biome check . --write"
 	}
 }
