--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
 	"dependencies": {
-		"@ai-sdk/openai": "^1.3.22",
+		"@ai-sdk/openai": "^2.0.65",
+		"@rubriclab/agents": "^0.0.65",
 		"@rubriclab/config": "*",
 		"@rubriclab/package": "*",
-		"@t3-oss/env-nextjs": "^0.11.1",
-		"@types/pg": "^8.15.4",
-		"ai": "^4.3.16",
-		"chalk": "^5.4.1",
-		"kysely": "^0.28.2",
-		"nanoid": "^5.1.5",
-		"openai": "^5.0.1",
-		"pg": "^8.16.0",
-		"zod": "3.24.2"
+		"@t3-oss/env-nextjs": "^0.13.8",
+		"@types/pg": "^8.15.6",
+		"chalk": "^5.6.2",
+		"kysely": "^0.28.8",
+		"nanoid": "^5.1.6",
+		"openai": "^6.8.1",
+		"pg": "^8.16.3",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
-		"@types/bun": "^1.2.15"
+		"@types/bun": "^1.3.2"
 	},
 	"main": "src/index.ts",
 	"module": "src/index.ts",
@@ -41,5 +41,5 @@
 		"post-commit": "bun x @rubriclab/package post-commit"
 	},
 	"type": "module",
-	"version": "0.0.52"
+	"version": "0.0.53"
 }
