--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,20 +2,18 @@
 	"[json]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
-	"[prisma]": {
-		"editor.defaultFormatter": "Prisma.prisma"
-	},
 	"[typescript]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
 	"[typescriptreact]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
+	"biome.enabled": true,
 	"editor.codeActionsOnSave": {
-		"quickfix.biome": "explicit",
-		"source.organizeImports.biome": "explicit"
+		"source.fixAll.biome": "always"
 	},
 	"editor.defaultFormatter": "biomejs.biome",
 	"editor.formatOnSave": true,
-	"editor.formatOnType": true
+	"editor.formatOnType": true,
+	"files.autoSave": "onFocusChange"
 }
